@@ -29,8 +29,9 @@
 ##
 
 - Building: Added missing prototypes for atlassian_parse_hash function
-- Files: Detect and warn when users try to use -r with a parameter which is not a file
-- Parameter: Detect and warn when users try to use an empty string (length 0) for parameters like --session=
+- Files: Detect and error when users try to use -r with a parameter which is not a file
+- Parameter: Detect and error when users try to use an empty string (length 0) for parameters like --session=
+- Parameter: Detect and error when users try to use a non-digit where a digit is expected
 - Sessions: Improved string comparison in case user sets --session to "hashcat"
 
 * changes v3.30 -> v3.40:
